# Engine-DirectX-11

./: ADVANCED_FEATURES_README.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  THIRD_PERSON_CAMERA_IMPLEMENTATION.md  VALIDATION_REPORT.md  build.bat  main.cpp
.same/: todos.md
Engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h  Renderer.cpp  Renderer.h
Examples/: AdvancedExample.cpp  BasicExample.cpp
Graphics/: Animation.cpp  Animation.h  ModelLoader.cpp  ModelLoader.h  PostProcess.cpp  PostProcess.h  Shader.cpp  Shader.h
Resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
assets/: test_cube.x
